# einherjarEngine

./: .bak.Makefile.bak  .gitignore  .stignore  CMakeLists.txt  GLsLhop.cpp  GLsLhop.h  GPUTimer.h  Makefile  README.md  a.cpp  b.bat  bb.bat  build.bat  build_glad.bat  einherjarEngine.exp  einherjarEngine.lib  glad.c  glad.lib  imgui.ini  m.bat  main.cpp
assets/: basic_cs.glsl  basic_f.frag  basic_tcsQ.glsl  basic_tes.glsl  basic_tesQ.glsl  basic_v.vert  tellu.frag  tellu0.frag
glad/: glad.c  glad.h
lib/glad/: build_glad.bat
lib/imgui/backends/: imgui_impl_dx10.h  imgui_impl_metal.h  imgui_impl_wgpu.h
scenes/: ADFtestScene.hpp  ComputeShaderTestScene.hpp  EnvirScene.hpp  FSRTestScene.hpp  RayMarchingTestScene.hpp  SampleScene.hpp  TriHelloWorldScene.hpp  VulkanTest.hpp
shaders/: basic_f.frag  basic_tesQ.glsl  basic_v.vert  fxaa.frag  gradientNoise2D.glsl  invert.frag  moltenGold.frag  tellu.frag  tellu2.frag
shaders/tessQ/: basic_f.frag  basic_tcsQ.glsl  basic_tesQ.glsl  basic_v.vert  tellu_tesQ.glsl
shaders/tessT/: basic_tcs.glsl
src/: Camera.cpp  Camera.hpp  Clock.hpp  GLProgram.cpp  GLProgram.hpp  GLShader.cpp  GLShader.hpp  GLUtils.cpp  GLUtils.hpp  GPUTimer.cpp  GPUTimer.hpp  Input.cpp  Input.hpp  Mesh.cpp  Mesh.hpp  main.cpp  sdfToMesh.cpp  sdfToMesh.hpp  suOGL.hpp  suVULK.hpp
src/GAPI/OGL/: GLFrameBuffer.hpp  GLProgram.cpp  GLProgram.hpp  GLUtils.cpp  GLUtils.hpp  GPUTimer.cpp  GPUTimer.hpp  OGLMesh.cpp  OGLMesh.hpp
src/Input/: BCodes.hpp  Input.cpp  Input.hpp
src/Input/GLFW/: GLFWCallbackTest.hpp  GLFWCodes.cpp  GLFWCodes.hpp  GLFWKeyboard.cpp  GLFWKeyboard.hpp  GLFWKeyboardBuffer.hpp  GLFWKeyboardCache.hpp  GLFWMouse.cpp  GLFWMouse.hpp
src/MeshProcessing/: DCADF.hpp
src/Structures/: AABB.hpp  ADF.hpp  Octree.hpp
src/Utility/: FPSLimiter.hpp  GLFWfpsLimiter.hpp  Timer.hpp
src/scenes/: ADFtestScene.hpp  ComputeShaderTestScene.hpp  EnvirScene.hpp  TriHelloWorldScene.hpp  computeShaderTest.hpp  sampleScene.hpp  sceneUtils.hpp  triangleHW.hpp  vulkanTest.hpp
